Transitioning strategy IDs to strategy names
